--- a/Styles.css
+++ b/Styles.css
@@ -19,7 +19,7 @@ h2 {
              1px 1px #0000ff, -1px -1px #0000ff, 1px -1px #0000ff, -1px 1px #0000ff;
 }
 
-button {
+img {
     display: block;
     margin-left: auto;
     margin-right: auto;
