--- a/Styles.css
+++ b/Styles.css
@@ -30,3 +30,28 @@ img {
     background-color: rgb(179, 209, 255);
     
 }
+
+/* Three image containers (use 25% for four, and 50% for two, etc) */
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+  }
+  
+  /* Clear floats after image containers */
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+button {
+    display: block;
+
+    
+    border: 5px solid rgb(0, 0, 255);
+    box-shadow: 10px 10px 60px rgb(179, 209, 255);
+    font-size: 20px;
+    background-color: rgb(179, 209, 255);
+    
+}
